css/main.css
body {
	height: 90vh;
	margin: 0;
}
header {
	height: 20vh;
}
main {
	height: 60vh;
}
footer {
	height: 10vh;
}
h1 {
	text-align: center;
	margin-top: 0%;
}
.greenPara {
	color: green;
	text-transform: uppercase;
}
.redPara {
	color: red;
	text-transform: uppercase;
}
.container {
	height: 90vh;
	width: 90%;
	margin: 5%;
}
.landingButtons{
	display: flex;
}
.game_container {
	width: 100%;
	height: 100%;
	background-color: black;
}
.clock {
	color: lawngreen;
	font-size: 400%;
}

.stopLight {
	height: 20%;
	width: 10%;
	background-color: grey;
}
.redLight {
	background-color: red;
	height: 100%;
	border-radius: 100%;
}
.greenLight {
	background-color: green;
	height: 100%;
	border-radius: 100%;
}

.user_piece {
	background-color: red;
	height: 10vh;
	width: 10vw;
	position: relative;
	top: 20%;
}
#highScoreModal {
	display:none;
	height: 90%;
	width: 90%;
	background-color: rgba(0,0,0,1);
}
#playModal {
	height: 20%;
	width: 20%;
	right: 40%;
	bottom:40%;
	color: red;
	/*background-color: rgba(0,0,0,0.5);*/
}

.modal{
	position: fixed;
	z-index: 1;
	overflow: auto;
	background-color: rgba(0,0,0,0.5);
}

.modal-content {
	color: green;
}
#addNameButton {
	display: none;
}

